# pmstate

./: .gitignore  .pre-commit-config.yaml  .session-flow.json  AGENTS.md  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
_devdocs/: INDEX.md
_devdocs/plans/: 2026-05-06-pmstate-v01-implementation.md
_devdocs/research/: 2026-05-06-pmstate-external-validation.md  2026-05-06-pmstate-internal-design.md  process_flow_agent_framework_concept.md
_devdocs/todo/: 2026-05-06-pmstate-v01-tasks.md
docs/: cli.md  spec-authoring.md
examples/feedback/: AGENTS.md  pmstate.yaml  reducers.py  seed_data.py  tree.py  views.py
examples/procurement/: AGENTS.md  pmstate.yaml  reducers.py  run.py  seed_data.py  tree.py  views.py
src/pmstate/: __init__.py  _paths.py  _ulid.py  _watcher.py  agents_md.py  envelope.py  node.py  reader.py  rollup.py  storage.py  tools.py  tree.py  upcasters.py  writer.py
tests/backends/: conftest.py  test_contract.py  test_fake_tools.py  test_filesystem.py
tests/integration/: spec_authoring_sample.yaml  test_cli_e2e.py  test_feedback_e2e.py  test_harness_smoke.py  test_procurement_e2e.py  test_spec_authoring_smoke.md
tests/unit/: test_agents_md.py  test_append_core.py  test_cli_append.py  test_cli_discovery.py  test_cli_init.py  test_cli_io.py  test_cli_run.py  test_cli_seed.py  test_cli_skeleton.py  test_cli_spec.py  test_cli_validate.py  test_docs_parity.py  test_envelope.py  test_envelope_properties.py  test_harness_write.py  test_node.py  test_paths.py  test_public_api.py  test_reader.py  test_reader_with_upcasters.py  test_rollup.py  test_rollup_with_tree.py  test_storage.py  test_tools.py  (+6 more)
(+27 files in other folders)
