[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmstate"
version = "0.4.0"
description = "The directory tree IS the process state. A tiny library for filesystem-shaped agent processes."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Mats Hoppenbrouwers" }]
keywords = ["agents", "process-state", "event-sourcing", "claude", "filesystem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "attrs>=23.2",
    "python-ulid>=2.7",
    "pyyaml>=6.0",
    "watchfiles>=0.24",
]

[project.optional-dependencies]
claude-sdk = ["claude-agent-sdk>=0.1.0"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "build>=1.2",
    "twine>=5",
    "pre-commit>=3.7",
]

[project.scripts]
pmstate = "pmstate.cli:main"

[project.urls]
Repository = "https://github.com/matshoppenbrouwers/pmstate"

[tool.hatch.build.targets.wheel]
packages = ["src/pmstate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pmstate --cov-report=term-missing --cov-fail-under=80 --strict-markers"
markers = [
    "integration: integration tests (may be slow or require external resources)",
]
